# sk8

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  cloudbuild.yaml  deploy.sh  file_io.py  profile_config.py  pyproject.toml  server.py  server_sdk.py  sk8.py
docs/: index.html
images/: service-graph.mmd
profiles/data-analyst/: profile.json
profiles/data-analyst/skills/data-analysis/: SKILL.md
profiles/default/: requirements.txt
